# calculate-flops.pytorch

./: pyproject.toml
calflops/: calculate_pipline.py  estimate.py  flops_counter.py  flops_counter_hf.py  pytorch_ops.py
