[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calflops"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zegang Cheng", email = "20091803+chengzegang@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["torch", "transformers", "tokenizers"]

[project.urls]
Documentation = "https://github.com/Zegang Cheng/calflops#readme"
Issues = "https://github.com/Zegang Cheng/calflops/issues"
Source = "https://github.com/Zegang Cheng/calflops"

[tool.hatch.version]
path = "calflops/__about__.py"
